sample/tenant1/NetworkPolicy.yml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: tenant1-default
  namespace: tenant1
spec:
  selector: all()
  types:
  - Egress
  - Ingress
  egress:
  - action: Allow
  ingress:
  - action: Allow
